hello world with asp.net core mvc

--- a/WebMVCTest/Views/Home/Index.cshtml
+++ b/WebMVCTest/Views/Home/Index.cshtml
@@ -2,7 +2,34 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<!-- Header -->
+<div class="jumbotron text-center mb-4">
+
+    <h1 class="display-4">Heyo, <s>World</s> Vincent</h1>
+    <h3>My first attempt at .NET Core 3.0</h3>
+
 </div>
+
+<!-- Body -->
+<div class="container">
+
+    <div class="row mb-5">
+        <div class="col-md-12">
+            <ul>
+                <li>Pretty cool how Bootstrap is already built in</li>
+                <li>Feels like home :)</li>
+                <li>Time to start learning</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+
+    </div>
+    <button id="helloBtn" class="btn btn-outline-danger">Yeaaa</button>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+</div>
+
+<!-- Scripts -->
+<script src="./js/site.js"></script>
